--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -468,6 +468,9 @@ section.section-trabajos {
     width: 368px;
     margin-bottom: 22px;
     position: relative;
+    @include min-screen($tl){
+        max-height: 85px;
+    }
     .icon {
         width: 86px;
         display: flex;
@@ -508,6 +511,69 @@ section.section-trabajos {
     width: 756px;
     margin-left: 25px;
 }
+
+.box-lugares-pago {
+    background: #FFFFFF;
+    border: 1px solid $gray;
+    border-radius: 5px;
+    height: 150px;
+    padding: 10px 80px 20px 80px;
+    .box-lugares-pago-inner {
+        border-bottom: 1px dashed #B7C0CE;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 100%;
+    }
+    .texto-lugares {
+        color: $blue-dark;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .filtro-lugares {
+        display: flex;
+        width: 50%;
+        align-items: center;
+        justify-content: space-between;
+    }
+}
+
+.btn-filtro-lugar {
+    background: #FFFFFF;
+    border: 2px solid $gray-dark;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 190px;
+    height: 60px;
+    padding: 8px;
+    &:hover {
+        text-decoration: none;
+    }
+    i {
+        margin-right: 19px; 
+    }
+    .texto-filtro {
+        padding: 0 5px 0 0;
+        .title-filtro {
+            color:$black-light;
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 22px;
+        }
+        p {
+            color:$black-light;
+            font-weight: normal;
+            font-size: 10px;
+            line-height: 13px;
+            margin: 0;
+        }
+    }
+    
+}
+
 
 .section-slider {
     margin-top: 40px;
