--- a/css/main.css
+++ b/css/main.css
@@ -3045,6 +3045,7 @@
   clip: auto;
 }
 
+/* @import '../node_modules/liferay-font-awesome/css/font-awesome'; */
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -3287,7 +3288,7 @@ body {
   border-radius: 5px;
   position: absolute;
   top: 32px;
-  left: 0;
+  left: -50px;
   /* background-image: url(../images/tiempo.png);
   background-repeat: no-repeat;
   background-position: top center; */
@@ -3479,6 +3480,27 @@ body {
   display: block;
 }
 
+.oe_overlay {
+  opacity: 0;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  pointer-events: none;
+  display: none;
+}
+@media only screen and (min-width: 830px) {
+  .oe_overlay {
+    display: block;
+  }
+}
+.oe_overlay.hover {
+  position: fixed;
+  background: #000;
+  opacity: 0.2;
+}
+
 .lista-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3512,6 +3534,7 @@ body {
 @media only screen and (min-width: 830px) {
   .lista-nav > li {
     position: static;
+    z-index: 12;
   }
 }
 .lista-nav > li > a {
@@ -4822,6 +4845,55 @@ section.section-trabajos {
   margin: 0 auto;
   position: relative;
   top: -24px;
+}
+
+.page {
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+.page .footer {
+  height: auto;
+}
+.page .main {
+  height: 1450px;
+  padding: 50px 0 50px 0;
+}
+.page .main .container {
+  max-width: 980px;
+}
+.page .breadcrumb {
+  background-color: transparent;
+  padding: 0.2rem 0.2rem;
+  margin-bottom: 0.3rem;
+}
+.page .breadcrumb li {
+  color: #2274FF;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.section-login h2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 27px;
+  line-height: 32px;
+  color: #003287;
+  display: block;
+  width: 100%;
+}
+
+.content-page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.content-page h3 {
+  color: #003287;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
 }
 
 .home-box {
