--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -62,7 +62,8 @@
     border-radius: 5px;
     position: absolute;
     top:32px;
-    left: 0;
+    //left: 0;
+    left: -50px;
     /* background-image: url(../images/tiempo.png);
     background-repeat: no-repeat;
     background-position: top center; */
@@ -215,7 +216,6 @@
     }
 }
 
-
 .arrow-top {
     background-image: url(../images/arrow-top.png);
     background-repeat: no-repeat;
@@ -224,6 +224,27 @@
     height: 12px;
     display: block;
 }
+
+.oe_overlay {
+	opacity:0;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+    z-index: 10;
+    pointer-events: none;
+    display: none;
+    @include min-screen($tl){
+        display: block;
+    }
+    &.hover {
+        position:fixed;
+        background:#000;
+        opacity:0.2;
+    }
+}
+
+
 .lista-nav {
     display: flex;
     flex-direction: column;
@@ -241,6 +262,7 @@
         position: relative;
         @include min-screen($tl){
             position: static;
+            z-index: 12;
         }
         > a {
             color: $blue;
