--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -119,6 +119,7 @@
 }
 
 .event-clima {
+    position: relative;
     a {
         margin-left: 2px;
         position: relative;
@@ -128,6 +129,64 @@
         }
     }
 }
+
+.box-estado-clima {
+    display: none;
+    width: 362px;
+    position: absolute;
+    // height: 490px;
+    z-index: 12;
+    left: -160px;
+    top: 37px;
+    padding: 18px 0 0  0;
+    background: #FFFFFF;
+    border: 0.5px solid #BDBDBD;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    &.active {
+        display: block;
+    }
+    .title-estado {
+        color: $blue-dark;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 30px;
+        margin-bottom: 15px;
+        padding: 0 23px;
+    }
+}
+
+.row-estado {
+    // padding: 8px 23px 8px 23px;
+    padding: 8px 36px 8px 23px;
+    display: flex;
+    &:hover {
+        // cursor: pointer;
+        background: #E7F0FF;
+        border-radius: 5px;
+    }
+    i {
+        margin-right: 19px;
+    }
+    .texto-estado {
+        .subtitle-estado {
+            color: $black-light;
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 23px;
+        }
+        p {
+            color: $black-light;
+            font-size: 14px;
+            line-height: 16px;
+            margin-bottom: 13px;
+        }
+    }
+
+}
+
+
 
 
 .logo-brand {
@@ -287,6 +346,9 @@
                 @include min-screen($tl){
                     display: block;
                 }
+            }
+            > a {
+                color: $blue;
             }
         }
     }
