se agrega funcionalidad ocultar ultimos 4 elementos ul li

--- a/css/main.css
+++ b/css/main.css
@@ -3103,6 +3103,10 @@ body {
   width: 1px;
 }
 
+.hide {
+  display: none;
+}
+
 .btn-ingresar {
   background-color: #FFA300;
   color: white;
@@ -3207,6 +3211,19 @@ body {
   font-weight: bold;
 }
 .btn-mostrar-noticias:hover {
+  background-color: #E69300;
+  color: white;
+}
+
+.btn-mostrar-politicas {
+  color: white;
+  background-color: #FFA300;
+  border-radius: 8px;
+  padding: 0.7rem 2.4rem;
+  font-size: 16px;
+  font-weight: bold;
+}
+.btn-mostrar-politicas:hover {
   background-color: #E69300;
   color: white;
 }
@@ -3950,6 +3967,9 @@ body {
 .box-politica .lista-texto li {
   color: #FFFFFF;
   margin-bottom: 24px;
+  /* &.hide {
+      display: none;
+  } */
 }
 .box-politica .lista-texto h4 {
   font-size: 16px;
