--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -39,6 +39,9 @@
         li {
             color: #FFFFFF;
             margin-bottom: 24px;
+            /* &.hide {
+                display: none;
+            } */
         }
         h4 {
             font-size: 16px;
