--- a/css/main.css
+++ b/css/main.css
@@ -3104,7 +3104,7 @@ body {
 }
 
 .hide {
-  display: none;
+  display: none !important;
 }
 
 .btn-ingresar {
@@ -4624,6 +4624,9 @@ section.section-trabajos {
     max-height: 85px;
   }
 }
+.item-mapa:last-child {
+  margin-bottom: 0;
+}
 .item-mapa .icon {
   width: 86px;
   display: -webkit-box;
@@ -4679,10 +4682,16 @@ section.section-trabajos {
   width: 756px;
   margin-left: 25px;
 }
+@media only screen and (min-width: 830px) {
+  .mapa {
+    min-height: 474px;
+  }
+}
 
 .box-lugares-pago {
   border: 1px solid #BFC1C5;
   border-radius: 5px;
+  margin-top: 22px;
   padding: 10px 20px 35px 80px;
 }
 .box-lugares-pago .box-lugares-pago-inner {
