--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,7 @@
 
 //Pages
 @import 'pages/home';
-@import 'pages/iniciar-sesion';
+@import 'pages/login';
 
 $bg-coral: coral;
 $bg-gray: #2d2d2d;
