--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -8,8 +8,11 @@
     }
     .main {
         background-color: #F3F4F6;
-        height: 1050px;
-        padding: 50px 0 50px 0;
+        // height: 1050px;
+        padding: 20px 0 50px 0;
+        @include min-screen($tl){
+            padding: 50px 0 50px 0;
+        }
         .container {
             max-width: 980px;
         }
@@ -42,12 +45,17 @@
 
 .content-page {
     display: flex;
-    padding: 70px 46px;
+    padding: 20px;
     background-color: white;
+    flex-direction: column;
+    @include min-screen($tl){
+        flex-direction: row;
+        padding: 70px 46px 135px 46px;
+    }
     .layout-formulario {
-        width: 59%;
-        border-right: 1px dashed #B7C0CE;
-        padding-right: 53px;
+        @include min-screen($tl){
+            width: 60%;
+        }
     }
     h3 {
         color:$blue-dark;
@@ -55,30 +63,58 @@
         font-size: 16px;
         line-height: 25px;
         margin-bottom: 23px;
+        
+    }
+
+    .layout-redes  {
+        @include min-screen($tl){
+            padding: 0 40px;
+            width: 40%;
+        }
+        h3 {
+            margin-bottom: 10px;
+        }
+    }
+}
+
+.box-redes-login  {
+    a {
+        margin-bottom: 1rem;
+        @include min-screen($tl){
+            margin-bottom: 40px;
+        }
     }
 }
 
 .formulario-login {
     .form-group {
-        margin-bottom: 2rem;
-         
+        margin-bottom: 1rem;
+        @include min-screen($tl){
+            margin-bottom: 2rem;
+        }
     }
     .form-control {
-        /* padding: 1rem 1rem; */
         font-size: 16px;
-/*         line-height: 1.5;
-        border-radius: 0.3rem; */
         border: 1px solid #B7C0CE;
         box-sizing: border-box;
         border-radius: 8px;
     }
 }
 
+.form-group-all {
+    @include min-screen($tl){
+        border-right: 1px dashed #B7C0CE;
+        padding-right: 53px;
+    }
+}
 
 .box-switch {
     display: flex;
-    margin-bottom: 56px;
-    margin-top: 70px;
+    margin-bottom: 20px;
+    @include min-screen($tl){
+        margin-bottom: 56px;
+        margin-top: 70px;
+    }
     .custom-control-label {
         margin-bottom: 0;
         margin-left: 20px;
@@ -90,7 +126,15 @@
 
 .dual-btn {
     margin-top: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @include min-screen($tl){
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    a {
+        margin-bottom: 20px;
+        @include min-screen($tl){
+            margin-bottom: 0;
+        }
+    }
 }
