--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 //Pages
 @import 'pages/home';
 @import 'pages/login';
+@import 'pages/recupera-contrasena';
 
 $bg-coral: coral;
 $bg-gray: #2d2d2d;
