--- a/scss/components/_helpers.scss
+++ b/scss/components/_helpers.scss
@@ -16,6 +16,11 @@
   width: 1px;
 }
 
+input::placeholder {
+  color: $gray-dark!important;
+  font-size: 16px;
+}
+
 .hide {
   display: none!important;
 }
